# sentiment-AI

./: README.md  dataset.py  package-lock.json  package.json  pnpm-lock.yaml
app/: page.tsx
app/api/health/: route.ts
app/api/predict/: route.ts
backend/: Dockerfile  Dockerfile.gpu  README.md  data.jsonl  docker-compose.yml  finetune.py  pyproject.toml  requirements.txt  test_model.py
backend/.github/workflows/: ci.yml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  graphql_schema.py  rest.py
backend/app/core/: __init__.py  batch_processor.py  config.py  models.py
backend/app/services/: __init__.py  inference.py
backend/app/utils/: file_watcher.py
backend/scripts/: build-and-run.sh  cleanup.sh
backend/tests/: test_api.py  test_models.py
components/: AnalysisHistory.tsx  BatchAnalyzer.tsx  Layout.tsx  LiveTypingInference.tsx  ModelInfo.tsx  ResultDisplay.tsx  SentimentAnalyzer.tsx
components/ui/: Button.tsx  Card.tsx  Textarea.tsx
frontend/: README.md  next.config.js  package.json  tailwind.config.js
frontend/components/: AnalysisHistory.tsx  BatchAnalyzer.tsx  Layout.tsx  LiveTypingInference.tsx  ModelInfo.tsx  SentimentAnalyzer.tsx
frontend/components/ui/: Button.tsx  Card.tsx  Input.tsx  Textarea.tsx
frontend/hooks/: useDebounce.ts  useSentiment.ts
frontend/lib/: api.ts  apollo.ts  store.ts  utils.ts
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css
frontend/types/: sentiment.ts
hooks/: useDebounce.ts  useSentiment.ts
lib/: api.ts  apollo.ts  store.ts  utils.ts
types/: sentiment.ts
(+3 files in other folders)
